--- a/index.html
+++ b/index.html
@@ -1,9 +1,91 @@
-<@DOCTYPE html>
+
 <html>
   <head>
     <title>teacozy</title>
+    <link href="/Users/evanshuey/Documents/devprojects/teacozy/resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1></h1>
-  </body>
+    <header>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Logo">
+
+        <nav>
+          <span><a href="Mission">Mission<a/></span>
+          <span><a href="Featured Tea">Featured <a/></span>
+          <span><a href="Locations"> Locations <a/></span>
+      </nav>
+      </div>
+    </header>
+    <div class="allcontent">
+      <div class="topsection">
+        <div id="mission" class="topimage">
+          <div class="bannertop">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+          </div>
+        </div>
+      </div>
+
+      <div id="Featured" class="bannermiddle">
+        <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+
+      <div class="middlesection">
+        <div class="collection">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry Blitz Tea">
+            <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="collection">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+            <span>Spiced Rum Tea</span>
+        </div>
+        <div class="collection">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Seasonal Doughnuts">
+            <span>Seasonal Doughnuts</span>
+        </div>
+        <div class="collection">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+            <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="collection">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Berry Blitz Tea">
+            <span>Bedford Bizzare Tea</span>
+        </div>
+      </div>
+      </div>
+      <div id="Locations" class="BottomSection">
+        <h2>Locations</h2>
+
+      <div class="locationblocks">
+        <div class="LocationCollection">
+          <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+        </div>
+        <div class="LocationCollection">
+          <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Nothwest Corner)</p>
+            <p>Portland, Main</p>
+        </div>
+        <div class="LocationCollection">
+          <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+        </div>
+      </div>
+      </div>
+      </div>
+      <div class="Contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
+
 </html>
